css/sub_Product.css
/* ... */
/* ===========================
    Specs Section (제품 스펙)
=========================== */
.specs-section {
    padding: 100px 0 0;
}
body.prod05 .specs-table-wrap {
    margin: 0 auto;
}

.specs-content {
    display: flex; align-items: flex-start; flex-direction: column; text-align: center;
}

/* 제품 전면도 */
.specs-diagram {
}

.specs-diagram img {
    width: 100%;
}


/* 제품 사양 테이블 */
.specs-table-wrap {
    width: 46.7vw; margin: 160px auto 0;
}

.specs-table {
    width: 100%; margin-top: 80px;
}

.specs-table thead tr {
    border-bottom: 2px solid #ADADAD;
}

.specs-table thead th {
    font-size: 2rem; font-weight: 600; padding: 17px 0; text-align: left; color: #3d3d3d;
}

.specs-table tbody th,
.specs-table tbody td {
    font-size: 2rem; padding: 20px 0px; border-bottom: 2px solid #e3e3e3; color: #3d3d3d;
}

.specs-table tbody tr:first-child th,
.specs-table tbody tr:first-child td {
    padding-top: 45px;
}

.specs-table tbody th {
    width: 16.8vw; font-weight: 500; text-align: left;
}

.specs-table tbody td {
    font-weight: 500; color: #555; text-align: left;
}


/* ===========================
    option (Time-lapse)
=========================== */
.option_tl {
    text-align: center;
}
.option_tl .container .tl-content {
    padding-top: 10px;
}
.option_tl .container .tl-content .tl01 {
    margin-bottom: 200px;
}
.option_tl .container .tl-content .tl01 p {
    font-weight: 500; font-size: 2rem; line-height: 2; padding: 40px 0 80px;
}
.option_tl .container .tl-content .tl01 img {
    width: 100%;
}

.option_tl .container .tl-content .tl02 {
    margin-bottom: 200px;
}
.option_tl .container .tl-content .tl02 > ul {
    padding-top: 40px;
}
.option_tl .container .tl-content .tl02 > ul li .fst_li,
.option_tl .container .tl-content .tl02 > ul li .sec_li {
    display: flex; justify-content: center; gap: 3.33vw;
}
.option_tl .container .tl-content .tl02 > ul li .fst_li li,
.option_tl .container .tl-content .tl02 > ul li .sec_li li {
    position: relative;
}
.option_tl .container .tl-content .tl02 > ul li .fst_li li p,
.option_tl .container .tl-content .tl02 ul li .sec_li li p {
    position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
    width: 100%; color: #fff; font-size: 2.4rem; font-weight: 500; line-height: 1.8;
}
.option_tl .container .tl-content .tl03 {
    display: flex; flex-direction: column; align-items: center;
}
.tl03 .sub_title_db {
    width: 41.1vw; margin-top: 0;
}
.tl03_text_wrap {
    display: flex; margin: 40px 0 80px; gap: 30px; justify-content: center;
}
.tl03_text_wrap p {
    display: flex; flex-direction: column; gap: 20px;
    text-align: start; font-weight: 500; font-size: 2rem; padding-left: 20px; border-left: 2px solid #ADADAD;
}
.tl03_text_wrap p span {
    display: block;
}
.tl03_notice_title {
    display: flex; align-items: center;
    width: 41.1vw; font-size: 2rem; font-weight: 700; white-space: nowrap;
}
.tl03_notice_title span {
    padding: 0 20px;
}
.tl03_notice_title .notice_bar {
    width: 100%; height: 2px; border: 1px solid #ADADAD;
}
.tl03_notice_box {
    width: 41.1vw;
}
.tl03_notice_box .notice01,
.tl03_notice_box .notice02,
.tl03_notice_box .notice03,
.tl03_notice_box .notice04 {
    margin-top: 20px; font-size: 2.2rem; font-weight: 400; line-height: 2; color: #fff; padding: 18px 0; border-radius: 5px;
}
.tl03_notice_box .notice01 {
    background: #AC7F5E;
}
.tl03_notice_box .notice02 {
    background: #CD891B;
}
.tl03_notice_box .notice03 {
    background: #949494;
}
.tl03_notice_box .notice04 {
    background: #346491;
}



/* ----------------------------------------------------------------------- */
/* ===========================
    Responsive - Tablet
=========================== */
@media screen and (max-width: 1200px) {
    .sub_title_db {
        font-size: 2rem;
    }
    .specs-table {
        width: 80%; justify-self: center;
    }
    .detail-wrap {
        gap: 40px;
    }
    
    .detail-gallery {
        width: 450px;
    }
    
    .prodThumbSwiper .swiper-slide {
        width: 75px; height: 75px;
    }

    .product-btn .label {
        width: 100px; font-size: 1.5rem; margin-top: 10px; white-space: normal;
    }

    /* Features */
    .feature-item {
        gap: 40px;
    }
    
    .feature-item .feature-img {
        width: 450px;
    }
    
    /* Specs */
    .specs-content {
        flex-direction: column; gap: 50px;
    }
    
    .specs-diagram,
    .specs-table-wrap {
        width: 100%;
    }
}
/* ... */

